[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Images/inventory_icons/Tool/wood axe.png" type="Texture" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Crafting/CraftingMenuButton.gd" type="Script" id=2]

[node name="CraftingMenuButton" type="Control"]
script = ExtResource( 2 )

[node name="btn" type="TextureButton" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )

[connection signal="mouse_entered" from="btn" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="btn" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="btn" to="." method="_on_btn_pressed"]
